--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://ades.join.com/jobs/258537-software-engineer-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer (m/w) ?Voll... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://ades.join.com/jobs/257778-software-engineer-iot-m-w-vollzeit'>Job @ ADES (Vienna): Software Engineer IoT (m/w) ?... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/3pillarglobal/12651258-4f19-4ed3-b08e-9ff28ff727e0'>3Pillar Global - Senior Software Engineer- Salesforce Development</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -87,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -115,7 +123,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
+<h5><a href='https://lynk-2.workable.com/j/2033D7EBB8'>Lynk - Jobs: Senior/Lead Software Engineer - Application Development - Apply online</a></h5> 
 <p><span class="badge badge-light">Hong Kong Island, Hong Kong</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -159,7 +167,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=od257fwb&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=nKuPUKwc'>Guidewire Software, Inc. Careers - Senior Software Engineer - Backend - San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=od257fwb&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=nKuPUKwc'>Guidewire Software, Inc. Careers - Senior Software Engineer - Backend - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -239,11 +247,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oCOK9fw3&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nlO1TKwi'>Apttus Careers - Senior Software Engineer, SFDC</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oCOK9fw3&__jvst=Employee+Referral%3a+Eligible&__jvsd=sNjqMgw3&__jvsc=Twitter&bid=nlO1TKwi'>Apttus Careers - Senior Software Engineer, SFDC</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/9XVPwzxQsj/Software-Engineer-NETMVC'>Software Engineer (.NET/MVC) - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/9XVPwzxQsj/Software-Engineer-NETMVC'>Software Engineer (.NET/MVC) - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mc Lean, VA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -287,7 +295,7 @@ SIMS8 development environment is making significant steps forwards in its?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/etsy/9671433b-8085-47b9-aa42-294d9ac443ac'>Etsy - Software Engineer, Core Platform</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -339,7 +347,7 @@ ideal?...</p>
 <p>Jul 16, 2019 ... Software Developer. The Challenge: Are you looking for an opportunity to not just 
 develop software, but to build a system that will have an impact? As a full-stack?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-AL-Montgomery-445-Dexter-Ave/Java-Software-Engineer--Senior_R0062054'>Java Software Engineer, Senior</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/BAH_Jobs/job/USA-AL-Montgomery-445-Dexter-Ave/Java-Software-Engineer--Senior_R0062054'>Java Software Engineer, Senior</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... As a full-stack developer, you can solve a problem with a complete end-to-end 
 solution in a fast-paced, agile environment. We're looking for a developer with the
@@ -357,7 +365,7 @@ solution in a fast-paced, agile environment. We're looking for a developer with 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/careem/jobs/4368458002'>Job Application for Senior Software Engineer (Android) at Careem</a></h5> 
+<h5><a href='https://boards.greenhouse.io/careem/jobs/4368458002'>Job Application for Senior Software Engineer (Android) at Careem</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -399,7 +407,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p>4 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ascend.io/b53af43e-8865-4ff2-b00d-b8fcc6ea835a'>Ascend.io - Backend Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ascend.io/b53af43e-8865-4ff2-b00d-b8fcc6ea835a'>Ascend.io - Backend Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Architect: you're passionate about architecture and designing for scale. You were 
 doing HA back in high school, and micro-service architectures in college.</p>
@@ -452,14 +460,6 @@ Rosalind Picard to learn more about the history of Empatica and what drives our
 <p>Posted on: 2019-07-24</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/NationalSoftwareManagement1/84162914-entry-level-software-developer'>National Software Management Entry Level software developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/newrelic/job/oXgDafwK'>New Relic Careers - Lead Software Engineer, Java</a></h5> 
-<p><span class="badge badge-light">Barcelona,</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/tunein/b72b881c-c039-4cd5-a64b-4d59e9a76655'>TuneIn - Senior Software Engineer, Core Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
