--- a/machine.html
+++ b/machine.html
@@ -123,7 +123,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://advertima.join.com/jobs/261690-computer-vision-and-machine-learning-engineer-m-f-in-tech-startup-zh-sg'>Computer Vision & Machine Learning Engineer (m/f) in Tech-Startup</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Advertima AG has a job opening for Computer Vision & Machine Learning 
 Engineer (m/f) in Tech-Startup (ZH/SG) in St. Gallen (published: 27.06.2019).</p>
@@ -173,16 +173,16 @@ a career change to somewhere where you can really make a difference,?...</p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
 <hr/>
-<h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_arm/external/gateway.do?functionName=viewFromLink&jobPostId=42820&localeCode=en-us'>Director of Applied Machine Learning - San Jose CA 95134 - ARM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Business Analyst-Finance San Jose (CA); Business Development Director San 
 Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dcard/jobs/874289'>Job Application for Junior Data Scientist / Machine Learning Engineer at Dcard</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -271,7 +271,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
+<h5><a href='https://atypon-systems-inc.workable.com/j/3E0A798C0C'>Atypon Systems - Jobs: Machine Learning / AI / Big Data Engineer, Athens - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -288,7 +288,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SmaatoInc/743999691792887-machine-learning-engineer-m-f-d-'>Smaato Inc. Machine Learning Engineer (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -301,7 +301,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/researchinnovations.com/08a380a6-056d-42ed-9f20-c266df3f159e'>Research Innovations - Big Data Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
