--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/caminar/job/onzDafwt'>Caminar Careers - Program Manager, Substance Use (LMFT/LCSW)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Dcode1/743999692302585-accelerator-program-manager'>Dcode Accelerator Program Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03fnc'>
     Senior Program Manager at Humancaresystems
 </a></h5> 
@@ -54,7 +62,7 @@
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://lewisham.referrals.selectminds.com/jobs/creative-enterprise-zone-cez-relationships-project-manager-771'>Creative Enterprise Zone (CEZ) Relationships & Project Manager - Lewisham Jobs Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lewisham.referrals.selectminds.com/jobs/creative-enterprise-zone-cez-relationships-project-manager-771'>Creative Enterprise Zone (CEZ) Relationships & Project Manager - Lewisham Jobs Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -136,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -184,11 +192,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/fullscreen/99d91f9b-2b30-4e57-b036-3d250d09c19c'>Fullscreen - Project Manager / Scrum Master</a></h5> 
+<h5><a href='https://jobs.lever.co/fullscreen/99d91f9b-2b30-4e57-b036-3d250d09c19c'>Fullscreen - Project Manager / Scrum Master</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nutanix/job/o2TCafwr'>Nutanix Careers - Technical Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nutanix/job/o2TCafwr'>Nutanix Careers - Technical Program Manager</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -196,7 +204,7 @@
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/health-assessment-project-manager-dBjzvkRU4r6yRUaKkRyNN8'>Health Assessment Project Manager #0094 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/thegreentreegroup/jobs/health-assessment-project-manager-dBjzvkRU4r6yRUaKkRyNN8'>Health Assessment Project Manager #0094 job at The Greentree Group in Beavercreek, OH, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -229,7 +237,7 @@
 <p>2 days ago ... It all begins with active personal involvement ? curiosity. Why can't things be 
 done differently, better or maybe simpler? Over the years, curiosity builds?...</p>
 <hr/>
-<h5><a href='http://wpromotecareers.applytojob.com/apply/TmG3BZPFsg/Project-Manager'>Project Manager - Wpromote - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://wpromotecareers.applytojob.com/apply/TmG3BZPFsg/Project-Manager'>Project Manager - Wpromote - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -359,7 +367,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl3/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fl3/'>
     Construction Project Manager - North at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -446,7 +454,7 @@ specializes in?...</p>
 <p>6 days ago ... About the Company: A roofing and building envelope subcontractor specializing 
 in roofing, waterproofing & restoration with a project portfolio consisting of?...</p>
 <hr/>
-<h5><a href='https://atheneum.recruitee.com/o/program-manager'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://atheneum.recruitee.com/o/program-manager'>
       Program Manager - Atheneum Partners
     </a></h5> 
 <p><span class="badge badge-light">Berlin London</span></p>
@@ -478,15 +486,6 @@ in roofing, waterproofing & restoration with a project portfolio consisting of?.
       (Ref. 474/2019) Data Science / Project Manager - Syone
     </a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://talent-appen.icims.com/jobs/4781/senior-project-manager/job'>Senior Project Manager in Chatswood, New South Wales | Careers ...</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 11, 2019 ... Appen brings over 20 years of experience capturing and enriching a wide variety 
-of data types including speech, text, image and video. With deep expertise in?...</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999692234969-project-manager-m-w-d-'>Publicis Groupe Project Manager (m/w/d) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
